--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     env:
-      XPLANE_SDK_PATH: ${{ GITHUB_WORKSPACE }}/xplane-sdk-sys/SDK
+      XPLANE_SDK_PATH: ${{ github.workspace }}/xplane-sdk-sys/SDK
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
