--- a/xplane-sdk-sys/Cargo.toml
+++ b/xplane-sdk-sys/Cargo.toml
@@ -4,7 +4,7 @@ description = "Low level bindings for the X-Plane SDK"
 documentation = "https://docs.rs/xplane-sdk-sys/"
 readme = "README.md"
 repository = "https://github.com/constvoidptr/xplane-sdk/tree/master/xplane-sdk-sys"
-license = "MIT OR Apache-2.0"
+license = "MIT or Apache-2.0"
 keywords = ["x-plane", "xplane", "sdk", "bindings"]
 version = "0.3.0"
 edition = "2021"
@@ -17,4 +17,4 @@ generate-bindings = ["dep:bindgen"]
 [dependencies]
 
 [build-dependencies]
-bindgen = { version = "0.69.4", optional = true }
+bindgen = { version = "0.72.0", optional = true }
