--- a/xplane-sdk-sys/Cargo.toml
+++ b/xplane-sdk-sys/Cargo.toml
@@ -6,10 +6,13 @@ readme = "README.md"
 repository = "https://github.com/constvoidptr/xplane-sdk/tree/master/xplane-sdk-sys"
 license = "MIT or Apache-2.0"
 keywords = ["x-plane", "xplane", "sdk", "bindings"]
-version = "0.3.0"
-edition = "2021"
+version = "0.4.0"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+doctest = false
 
 [features]
 generate-bindings = ["dep:bindgen"]
