--- a/xplane-sdk-sys/Cargo.toml
+++ b/xplane-sdk-sys/Cargo.toml
@@ -4,7 +4,7 @@ description = "Low level bindings for the X-Plane SDK"
 documentation = "https://docs.rs/xplane-sdk-sys/"
 readme = "README.md"
 repository = "https://github.com/constvoidptr/xplane-sdk/tree/master/xplane-sdk-sys"
-license = "MIT or Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["x-plane", "xplane", "sdk", "bindings"]
 version = "0.4.0"
 edition = "2024"
